2006-05-29 Kalpit Desai <kvdesai@email.unc.edu>
	* lt_analysis_gui.fig, lt_analysis_gui.m: Previous commit was wrong version, committing correct versions.
2006-05-29 Kalpit Desai <kvdesai@email.unc.edu>
	* lt_analysis_gui.fig: Grouped 'spectrogram' and 'in box only' into a new subpanel for processing active file only.	
	* lt_analysis_gui.m: Rewrote the computation and plotting of spectrogram so that it actually works now. 
	- Also added overlay of time-domain trace on to the spectrogram itself.

2006-05-18 Kalpit Desai <kvdesai@email.unc.edu>
	* fsanalysis_subgui.m, fsanalysis_subgui.fig:
	- fixed a bug in shifting the under-hood frequency window
	- Now shows harmonic markers for excitation frequency, while looking underh the hood
	- Added a menu that allows user to select the units of yaxis (e.g. Power, displacement, displacement*frequency etc).
	- Coding necessary for providing choices for the units of Y axis
	- Added option to view total harmonic distortion vs frequency
	- Fixed a bug in parsing the input array for under-the-hood frequencies
2006-05-18 Kalpit Desai <kvdesai@email.unc.edu>
	* lt_analysis_gui.m: Fixed a bug where positionError field was ignored even when asked to be plotted.
	* fsanalysis_subgui.m, fsanalysis_subgui.fig:
	- Improved the speed of segment detection by ~300 times. Processing time is now within limits of patience.
	- Added ability to 'look under the hood' for what happens while processing a small user-selectable list of frequencies. Plots raw psd.
	- Now imports and puts legends on all the figures
	- Now only processes for the dimensions which are selected in the lt_analysis_gui
	- Added a "shifter" on GUI that conveniently shifts the 'look under the hood' frequency window.
	- Improved speed of computation of frequency sweep response
	- several other bug fixes.
2006-05-17 Kalpit Desai <kvdesai@email.unc.edu>
	* partial commit. Need to switch computer.
2006-05-15 Kalpit Desai <kvdesai@email.unc.edu>